--- a/HTML_CSS_CLASS/css/common.css
+++ b/HTML_CSS_CLASS/css/common.css
@@ -1,5 +1,5 @@
 /* reset */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,textarea,p,blockquote,th,td,input,select,textarea,button {margin:0;padding:0}
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,textarea,p,blockquote,th,td,input,select,textarea,button {margin:0;padding:0;}
 fieldset,img {border:0 none}
 dl,ul,ol,menu,li {list-style:none}
 blockquote, q {quotes: none}
@@ -7,4 +7,5 @@ blockquote:before, blockquote:after,q:before, q:after {content:'';content:none}
 input,select,textarea,button {vertical-align:middle}
 button {border:0 none;background-color:transparent;cursor:pointer}
 body {background:#fff}
-body,th,td,input,select,textarea,button {font-size:18px;line-height:1.5;font-family:'malgun gothic',sans-serif;color:#333}
+body,a,th,td,input,select,textarea,button {font-size:25px;line-height:1.5;font-family:'malgun gothic',sans-serif;color:whitesmoke; background-color:#202124;}
+a:visited{color:lightsalmon;}
