--- a/HTML_CSS_CLASS/css/common.css
+++ b/HTML_CSS_CLASS/css/common.css
@@ -5,7 +5,8 @@ dl,ul,ol,menu,li {list-style:none}
 blockquote, q {quotes: none}
 blockquote:before, blockquote:after,q:before, q:after {content:'';content:none}
 input,select,textarea,button {vertical-align:middle}
-button {border:0 none;background-color:transparent;cursor:pointer}
-body {background:#fff}
-body,a,th,td,input,select,textarea,button {font-size:25px;line-height:1.5;font-family:'malgun gothic',sans-serif;color:whitesmoke; background-color:#202124;}
+/* button {border:1 none; background-color:darkgoldenrod;cursor:pointer} */
+input {margin:10px;}
+/* body {background-color:#202124;} */
+a,th,td,textarea {font-size:25px;line-height:1.5;font-family:'malgun gothic',sans-serif;color:whitesmoke;}
 a:visited{color:lightsalmon;}
