--- a/HTML_CSS_CLASS/css/style.css
+++ b/HTML_CSS_CLASS/css/style.css
@@ -2,3 +2,52 @@ img {
     width:1000px;
     height:auto;
 }
+
+.w-20 {
+    width:20px;
+}
+.w-40 {
+    width:40px;
+}
+.w-60 {
+    width:60px;
+}
+.w-80 {
+    width:80px;
+}
+.w-100 {
+    width:100px;
+}
+.w-200 {
+    width:200px;
+}
+.w-300 {
+    width:300px;
+}
+.h-20 {
+    height:20px;
+}
+.h-40 {
+    height:40px;
+}
+.h-60 {
+    height:60px;
+}
+.h-80 {
+    height:80px;
+}
+.h-100 {
+    height:100px;
+}
+.h-200 {
+    height:200px;
+}
+.h-300 {
+    height:300px;
+}
+.brown {
+    color:brown;
+}
+.border-box {
+    box-sizing: border-box;
+}
