--- a/HTML_CSS_CLASS/css/common.css
+++ b/HTML_CSS_CLASS/css/common.css
@@ -10,3 +10,4 @@ input {margin:10px;}
 /* body {background-color:#202124;} */
 a,th,td,textarea {font-size:25px;line-height:1.5;font-family:'malgun gothic',sans-serif;color:whitesmoke;}
 a:visited{color:lightsalmon;}
+div {margin-bottom: 30px;}
