--- a/HTML_CSS_CLASS/css/common.css
+++ b/HTML_CSS_CLASS/css/common.css
@@ -1,13 +1,18 @@
 /* reset */
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,textarea,p,blockquote,th,td,input,select,textarea,button {margin:0;padding:0;}
-fieldset,img {border:0 none}
-dl,ul,ol,menu,li {list-style:none}
-blockquote, q {quotes: none}
-blockquote:before, blockquote:after,q:before, q:after {content:'';content:none}
-input,select,textarea,button {vertical-align:middle}
+fieldset,img {border:0 none;}
+dl,ul,ol,menu,li {list-style:none; list-style-position : inside;}
+blockquote, q {quotes: none;}
+blockquote:before, blockquote:after,q:before, q:after {content:'';content:none;}
+input,select,textarea,button {vertical-align:middle;}
 /* button {border:1 none; background-color:darkgoldenrod;cursor:pointer} */
 input {margin:10px;}
 /* body {background-color:#202124;} */
-a,th,td,textarea {font-size:25px;line-height:1.5;font-family:'malgun gothic',sans-serif;color:whitesmoke;}
+a,th,td,textarea {font-size:25px;line-height:1.5;font-family:'malgun gothic',sans-serif;color:#161616;}
 a:visited{color:lightsalmon;}
 div {margin-bottom: 30px;}
+tr, td {border:1px solid black; }
+table {border-collapse: collapse; }
+td {padding:5px 10px; vertical-align: middle; text-align: center;}
+thead tr td {background-color: lightgray; font-weight: bold;}
+tr:nth-child(2n) td {background-color: lightgoldenrodyellow;}
