--- a/HTML_CSS_CLASS/css/style.css
+++ b/HTML_CSS_CLASS/css/style.css
@@ -112,3 +112,9 @@
 .circle {list-style: circle; list-style-position: inside;}
 .square {list-style: square; list-style-position: inside;}
 .decimal {list-style: decimal; list-style-position: inside;}
+
+/* 우선순위테스트 */
+.test {
+    background-color: lightcoral  !important;
+    color: pink ;
+}
