--- a/HTML_CSS_CLASS/css/common.css
+++ b/HTML_CSS_CLASS/css/common.css
@@ -30,23 +30,45 @@
 }
 
 /* reset */
-body {
-    font-family:'나눔고딕', 'NanumGothic', 'Times New Roman', Times, Arial, Helvetica, sans-serif, 'NanumSquareRound', 'NanumGothic';
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+ margin: 0;
+ padding: 0;
+ border: 0;
+ outline: 0;
+ font-size: 100%;
+ vertical-align: baseline;
+ background: transparent;
 }
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,textarea,p,blockquote,th,td,input,select,textarea,button {margin:0;padding:0;}
-fieldset,img {border:0 none; margin: 0;font-family: Arial, Helvetica, sans-serif, 'NanumSquareRound', 'NanumGothic'; }
-dl,ul,ol,menu,li {list-style:none; list-style-position : inside;}
-blockquote, q {quotes: none;}
-blockquote:before, blockquote:after,q:before, q:after {content:'';content:none;}
-input,select,textarea,button {vertical-align:middle;}
-input {margin:10px;}
-a,th,td,textarea {font-size:25px;line-height:1.5; color:#161616;}
-a:visited{color:lightsalmon;}
-div {margin-bottom: 30px;}
-tr, td {border:1px solid black; }
-table {border-collapse: collapse; }
-td {padding:5px 10px; vertical-align: middle; text-align: center;}
-thead tr td {background-color: lightgray; font-weight: bold;}
-tr:nth-child(2n) td {background-color: lightgoldenrodyellow;}
-
-
+body {
+ line-height: 1;
+}
+ol, ul {
+ list-style: none;
+}
+blockquote, q {
+ quotes: none;
+}
+/* remember to define focus styles! */
+:focus {
+ outline: 0;
+}
+/* remember to highlight inserts somehow! */
+ins {
+ text-decoration: none;
+}
+del {
+ text-decoration: line-through;
+}
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+ border-collapse: collapse;
+ border-spacing: 0;
+}
